<resources>
    <string name="app_name">Daily Reminder Assistant</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="jadwal_harian">Jadwal Harian</string>
    <string name="senin">Senin</string>
    <string name="selasa">Selasa</string>
    <string name="rabu">Rabu</string>
    <string name="kamis">Kamis</string>
    <string name="jumat">Jumat</string>
    <string name="sabtu">Sabtu</string>
    <string name="minggu">Minggu</string>
    <string name="kegiatan_penting">Kegiatan Penting</string>
    <string name="password_required">Authentication Required</string>
    <string name="no_security">No any security setup done by user(pattern or password or pin or fingerprint</string>
    <string name="success_auth">Success: Verified user\'s identity</string>
    <string name="failure_auth">Failure: Unable to verify user\'s identity</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="user_name">User Name</string>
    <string name="title_activity_settings">Settings</string>

    <string name="active_login">Authentication before opening app enable</string>
    <string name="inactive_login">Authentication before opening app disable</string>
    <string name="login_pref_title">Authentication</string>

    <string name="active_reminder">Reminder for important event enabled</string>
    <string name="inactive_reminder">Reminder for important event disabled</string>
    <string name="reminder_title">Reminder</string>

    <string name="auth_key">authkey</string>
    <string name="reminder_key">reminderkey</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="waktu">Waktu</string>
    <string name="pilih_waktu">Pilih Waktu</string>
    <string name="tempat">Tempat</string>
    <string name="isi_tempat_pelaksanaan_jadwal">Isi tempat pelaksanaan jadwal</string>
    <string name="simpan">Simpan</string>
    <string name="hari">Hari</string>
    <string name="update">Update</string>
    <string name="action_delete">Hapus</string>
    <string name="tambah">Tambah</string>
    <string name="batal">Batal</string>
    <string name="apakah_perubahan_form">Apakah Anda ingin membatalkan perubahan pada form?</string>
    <string name="apakah_hapus">Apakah Anda ingin menghapus item ini?</string>
    <string name="ya">Ya</string>
    <string name="tidak">Tidak</string>
    <string name="success_add">Added successfuly</string>
    <string name="success_update">Updated successfuly</string>
    <string name="success_delete">Deleted successfuly</string>
    <string name="fail_add">Failed to save</string>
    <string name="error_in_validation">Error in validation</string>
    <string name="id">ID.</string>
    <string name="keterangan">Keterangan</string>
    <string name="tanggal">Tanggal</string>
    <string name="pilih_tanggal">Pilih Tanggal</string>
    <string name="pengingat">Pengingat</string>
    <string-array name="spinner_jenis_alarm">
        <item>Tidak Aktif</item>
        <item>Aktif</item>
        <item>Hanya Notifikasi Tanpa Suara dan Getaran</item>
        <item>Notifikasi dan Suara Tanpa Getaran</item>
        <item>Notifikasi dan Getaran Tanpa Suara</item>
    </string-array>
</resources>
