<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TambahUpdateKegiatanPentingActivity">
    <TextView
        android:id="@+id/lblTanggal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tanggal"
        android:textStyle="bold"
        style="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        android:layout_marginBottom="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnPilihTanggal"
        app:layout_constraintHorizontal_weight="0.6"/>
    <TextView
        android:id="@+id/txtTanggal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Tanggal"
        style="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/lblTanggal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/lblTanggal"/>
    <Button
        android:id="@+id/btnPilihTanggal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHorizontal_weight="0.4"
        style="@style/Widget.AppCompat.Button.Colored"
        android:text="@string/pilih_tanggal"
        app:layout_constraintTop_toTopOf="@id/lblTanggal"
        app:layout_constraintStart_toEndOf="@id/lblTanggal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/txtTanggal" />
    <TextView
        android:id="@+id/lblWaktu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/waktu"
        android:textStyle="bold"
        style="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        android:layout_marginBottom="4dp"
        app:layout_constraintTop_toBottomOf="@id/txtTanggal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnPilihJam"
        app:layout_constraintHorizontal_weight="0.6"/>
    <TextView
        android:id="@+id/txtWaktu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="hh:mm"
        style="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/lblWaktu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/lblWaktu"/>

    <Button
        android:id="@+id/btnPilihJam"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHorizontal_weight="0.4"
        style="@style/Widget.AppCompat.Button.Colored"
        android:text="@string/pilih_waktu"
        app:layout_constraintTop_toTopOf="@id/lblWaktu"
        app:layout_constraintStart_toEndOf="@id/lblWaktu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/txtWaktu"/>
    <TextView
        android:id="@+id/lblTempat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tempat"
        android:textStyle="bold"
        style="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        android:layout_marginBottom="4dp"
        app:layout_constraintTop_toBottomOf="@id/txtWaktu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/edtTempat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/lblTempat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="8dp"
        android:hint="@string/isi_tempat_pelaksanaan_jadwal"
        android:inputType="text"
        />
    <TextView
        android:id="@+id/lblKeterangan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/keterangan"
        android:textStyle="bold"
        style="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        android:layout_marginBottom="4dp"
        app:layout_constraintTop_toBottomOf="@id/edtTempat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/edtKeterangan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintTop_toBottomOf="@id/lblKeterangan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:lines="4"
        android:hint="Isi penjelasan singkat mengenai jadwal"
        />
    <TextView
        android:id="@+id/lblJenisPengingat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/pengingat"
        android:textStyle="bold"
        style="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        android:layout_marginBottom="4dp"
        app:layout_constraintTop_toBottomOf="@id/edtKeterangan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spnJenisAlarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/spinner_jenis_alarm"
        app:layout_constraintTop_toBottomOf="@id/lblJenisPengingat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="8dp"
        />
    <Button
        android:id="@+id/btnSimpan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Colored"
        app:layout_constraintTop_toBottomOf="@id/spnJenisAlarm"
        android:text="@string/simpan"
        />
</androidx.constraintlayout.widget.ConstraintLayout>