<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    tools:context=".TambahUpdateJadwalHarianActivity">
    <TextView
        android:id="@+id/lblHari"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hari"
        android:textStyle="bold"
        style="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        android:layout_marginBottom="4dp"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/txtHari"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Hari"
        style="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/lblHari"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/lblHari"/>
    <TextView
        android:id="@+id/lblWaktu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/waktu"
        android:textStyle="bold"
        style="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        android:layout_marginBottom="4dp"
        app:layout_constraintTop_toBottomOf="@id/txtHari"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnPilihJam"
        app:layout_constraintHorizontal_weight="0.6"/>
    <TextView
        android:id="@+id/txtWaktu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="hh:mm"
        style="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/lblWaktu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/lblWaktu"/>

    <Button
        android:id="@+id/btnPilihJam"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHorizontal_weight="0.4"
        style="@style/Widget.AppCompat.Button.Colored"
        android:text="@string/pilih_waktu"
        app:layout_constraintTop_toTopOf="@id/lblWaktu"
        app:layout_constraintStart_toEndOf="@id/lblWaktu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/txtWaktu"/>
    <TextView
        android:id="@+id/lblTempat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tempat"
        android:textStyle="bold"
        style="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        android:layout_marginBottom="4dp"
        app:layout_constraintTop_toBottomOf="@id/txtWaktu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/edtTempat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/lblTempat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="8dp"
        android:hint="@string/isi_tempat_pelaksanaan_jadwal"
        android:inputType="text"
        />
    <TextView
        android:id="@+id/lblKeterangan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/keterangan"
        android:textStyle="bold"
        style="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        android:layout_marginBottom="4dp"
        app:layout_constraintTop_toBottomOf="@id/edtTempat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/edtKeterangan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintTop_toBottomOf="@id/lblKeterangan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="8dp"
        android:lines="4"
        android:hint="Isi penjelasan singkat mengenai jadwal"
        />

    <Button
        android:id="@+id/btnSimpan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Colored"
        app:layout_constraintTop_toBottomOf="@id/edtKeterangan"
        android:text="@string/simpan"
        />
</androidx.constraintlayout.widget.ConstraintLayout>